Initialize toggle button status by current BT status.

Before this change the button was OFF when the window appears and then
updated with animation after that.

Test: manual
Bug: 868307
Change-Id: Iac019198518415ae5c98cc716d85c90f014d8fae
Reviewed-on: https://chromium-review.googlesource.com/1177220
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584996}